Adjusted responsiveness for min-width, fixed icons for time of day, adjusted height of all-goals list to avoid overlap, added Enter functionality to Edit

--- a/server/public/css/all_goals.css
+++ b/server/public/css/all_goals.css
@@ -9,6 +9,7 @@ html{
 body{
     height: 100%;
     min-height: 100%;
+    min-width: 330px;
     background-color: #F2F2F2;
 }
 
@@ -50,7 +51,7 @@ body{
 
 .all-goals-list{
     width: 100%;
-    height: 90%;
+    height: 80%;
     overflow-y: auto;
     font-size: 1.2em;  
 }
@@ -86,7 +87,7 @@ a.btn.btn-small{
 /**********INDIVIDUAL GOALS**********/
 .goal-container{
     display: inline-flex;
-    padding: 2% 7% 2% 4%;
+    padding: 5% 4% 2% 4%;
     width: 100%;
     text-align: center;
      
@@ -94,30 +95,30 @@ a.btn.btn-small{
 
 .goal-description{
     background-color: #A2D3DA;
-    width: 87%;
+    width: 66%;
     padding: 2% 3% 2% 7%;
     font-size: 1.25em;
     justify-content: center;
     font-family: 'Roboto', sans-serif;
     hyphens: auto;
     color: white;
+    border: 1px solid white;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
 .dayName {
     height: 90%;
-    width: 1%;
+    width: 8%;
     /* transform: translate(130%, 0%);
     font-size: 0.60em; */
-    transform: translate(130%, 60%);
     font-size: 1rem;
 }
 
 .timeOfDayImage {
     height: 24%;
     width: 6%;
-    transform: translate(130%, 0%);
+    
     
 }
 
@@ -127,6 +128,9 @@ a.btn.btn-small{
     display: inline-flex;
     width: 12%;
     height: auto;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid white;
 }
 
 .goal-button{
@@ -174,7 +178,6 @@ button.dropdown-button.dropdown-trigger.goal-button {
 .footer-container{
     height: 9%;
     border-top: 1px rgb(87, 87, 87) solid;
-    position: absolute;
     bottom: 0;
     width: 100%;
     max-width: 600px;
